# dgi

./: .gitignore  CMakeLists.txt  README.md  skeleton.cpp
lab 1/: .gitignore  CMakeLists.txt  gradient.cpp  interpolate.h  report.tex  starfield.cpp  timer.c  timer.h
lab 2/: CMakeLists.txt  TestModel.h  ray_tracing.cpp  report.tex
lab 3/: CMakeLists.txt  Rasterization  TestModel.h  pixel.h  rasterization.cpp  report.tex  vertex.h
